# simplemath

./: .gitignore  CMakeLists.txt
include/SimpleMath/: SimpleMath.h  SimpleMathBase.h
tests/: CMakeLists.txt  FindUnitTest++.cmake  Makefile  TestSimpleMathBlock.cc  TestSimpleMathCholesky.cc  TestSimpleMathCommaInitializer.cc  TestSimpleMathDynamic.cc  TestSimpleMathFixed.cc  TestSimpleMathMap.cc  TestSimpleMathMixed.cc  TestSimpleMathQR.cc  TestSimpleMathQuaternion.cc  TestSimpleMathV2.cc  output_test.cc  tests.cpp
